data/derived/comb/progs/unify/prog5846.ml.out
Characters 111-128:
  let seen' = (if List.mem (h seen) then [] else (seen) @ h) in
                  ^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list -> bool
       but an expression was expected of type bool
